--- a/client/src/components/app/app.css
+++ b/client/src/components/app/app.css
@@ -1,3 +1,34 @@
+
+
 .blur {
   filter: blur(5px);
+}
+
+#main-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center ;
+  /*align-items: center;*/
+  /*margin: 200px;*/
+  padding: 150px;
+  /*flex-flow: column wrap;*/
+  background-color: #e7ebec;
+  align-content: space-between;
+  flex-grow: 1.2;
+
+}
+
+.second-div{
+  display: flex;
+  flex-grow: 1.2;
+  align-items: stretch;
+  align-content: stretch;
+  flex-direction: column;
+}
+#available-bikes {
+  margin: 100px;
+}
+h3{
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
